fix(frontend): Add overflow back to sidebar
IssueID #626

--- a/client/src/map/orbs/isolationPlus/radio-picker/radio-picker.module.css
+++ b/client/src/map/orbs/isolationPlus/radio-picker/radio-picker.module.css
@@ -52,5 +52,5 @@
   margin-left: auto;
   margin-right: auto;
   color: #fff;
-  max-width: 41%;
+  max-width: 42%;
 }
