--- a/client/src/side-menu/side-menu.module.css
+++ b/client/src/side-menu/side-menu.module.css
@@ -64,6 +64,8 @@
 .sidebar {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .header {
